Control mapping working, not pretty though!

--- a/settings.html
+++ b/settings.html
@@ -31,6 +31,14 @@
         </div>
         <div id="settings">
             <div class="option">
+                <button type="button" id="gamepad-refresh-button">Refresh gamepads</button>
+            </div>
+            <div class="option">
+                <label for="gamepad-select">Select gamepad</label>
+                <select id="gamepad-select"></select>
+            </div>
+            <div class="option" id="button-list"></div>
+            <div class="option">
                 <label for="apply-button">Apply changes (causes refresh)</label>
                 <button type="button" id="apply-button">Apply</button>
             </div>
