Specifiy why selecting gamepad

--- a/settings.html
+++ b/settings.html
@@ -45,7 +45,7 @@
                 <button type="button" id="gamepad-refresh-button">Refresh gamepads</button>
             </div>
             <div class="option">
-                <label for="gamepad-select">Select gamepad</label>
+                <label for="gamepad-select">Select target gamepad</label>
                 <select id="gamepad-select"></select>
             </div>
             <table class="control-table">
